WIP: Using Api to get project info and fix responsive layout issues

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -17,8 +17,14 @@ body {
 
 #copyright-container {
     text-align: center;
-    margin-bottom: 1rem;
+    margin: 1rem;
 }
 #copyright-container > span {
     font-size: 1pt;
+}
+
+@media (min-width: 1660px) {
+    #copyright-container {
+        margin: 2rem 0 1rem;
+    }
 }
